Fix extra view width on mobile

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -158,3 +158,9 @@
     max-width: 300px;
   }
 }
+
+@media screen and (max-width: 375px) {
+  .contact-component article div.contact-intro h3 {
+    margin-top: 40px;
+  }
+}
