--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -331,4 +331,8 @@
   .projects-component .arrow {
     top: 93%;
   }
+
+  .projects-component .project-description .project-links {
+    right: 0.5em;
+  }
 }
